chore: Update Scaffolding

--- a/README.yaml
+++ b/README.yaml
@@ -1,4 +1,3 @@
----
 #
 # This is the canonical configuration for the `README.md`
 # Run `make readme` to rebuild the `README.md`
@@ -36,16 +35,17 @@ github_repo: cloudposse/terraform-aws-ec2-admin-server
 
 # Badges to display
 badges:
-  - name: "Build Status"
-    image: "https://travis-ci.org/cloudposse/terraform-aws-ec2-admin-server.svg?branch=master"
-    url: "https://travis-ci.org/cloudposse/terraform-aws-ec2-admin-server"
-  - name: "Latest Release"
-    image: "https://img.shields.io/github/release/cloudposse/terraform-aws-ec2-admin-server.svg"
-    url: "https://github.com/cloudposse/terraform-aws-ec2-admin-server/releases/latest"
-  - name: "Slack Community"
-    image: "https://slack.cloudposse.com/badge.svg"
-    url: "https://slack.cloudposse.com"
+  - name: Latest Release
+    image: https://img.shields.io/github/release/cloudposse/terraform-aws-ec2-admin-server.svg?style=for-the-badge
+    url: https://github.com/cloudposse/terraform-aws-ec2-admin-server/releases/latest
+  - name: Last Updated
+    image: https://img.shields.io/github/last-commit/cloudposse/terraform-aws-ec2-admin-server.svg?style=for-the-badge
+    url: https://github.com/cloudposse/terraform-aws-ec2-admin-server/commits
+  - name: Slack Community
+    image: https://slack.cloudposse.com/for-the-badge.svg
+    url: https://slack.cloudposse.com
 
+# List any related terraform modules that this module may be used with or that this module depends on.
 related:
   - name: "bastion"
     description: "🔒Secure Bastion implemented as Docker Container running Alpine Linux with Google Authenticator & DUO MFA support"
@@ -123,12 +123,4 @@ include:
   - "docs/terraform.md"
 
 # Contributors to this project
-contributors:
-  - name: "Sergey Vasilyev"
-    github: "s2504s"
-  - name: "Valeriy"
-    github: "drama17"
-  - name: "Vladimir"
-    github: "SweetOps"
-  - name: "Konstantin B"
-    github: "comeanother"
+contributors: []
