--- a/README.yaml
+++ b/README.yaml
@@ -43,7 +43,7 @@ badges:
     url: https://github.com/cloudposse/terraform-aws-ec2-admin-server/commits
   - name: Slack Community
     image: https://slack.cloudposse.com/for-the-badge.svg
-    url: https://slack.cloudposse.com
+    url: https://cloudposse.com/slack
 
 # List any related terraform modules that this module may be used with or that this module depends on.
 related:
@@ -118,9 +118,5 @@ references:
     description: "Thanks for the inspiration"
     url: "https://github.com/cloudposse/terraform-aws-ec2-bastion-server"
 
-include:
-  - "docs/targets.md"
-  - "docs/terraform.md"
-
-# Contributors to this project
+include: []
 contributors: []
